fixed chat message wrapping

--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -44,7 +44,7 @@ section#chat div.message span.timestamp{
 
 
 div#simplechat div#messages{
-	width: 100%;
+	/*width: 100%;*/
 	height: 19rem;
 	overflow-y: scroll;
 	overflow-x: hidden;
@@ -60,7 +60,6 @@ div#simplechat div.message{
 	line-height: 1.5em;
 	padding-right: 0.5em;
 	display: table-row;
-	width: 90%;
 }
 
 div#simplechat div.message:nth-child(odd){
@@ -80,7 +79,17 @@ div#simplechat div.message span.text{
 	display: table-cell;
 	padding-left: 0.5em;
 	padding-right: 0.5em;
-	width: 100%;
+	width: 90%;
+		white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
+white-space: -pre-wrap;      /* Opera 4-6 */
+white-space: -o-pre-wrap;    /* Opera 7 */
+white-space: pre-wrap;       /* css-3 */
+word-wrap: break-word;       /* Internet Explorer 5.5+ */
+word-break: break-word;
+white-space: normal;
+-webkit-hyphens: auto;
+   -moz-hyphens: auto;
+        hyphens: auto;
 }
 
 div#simplechat div.message span.timestamp{
@@ -101,7 +110,7 @@ div#simplechat input{
 }
 
 div.chat-saloon span.username{
-	color: #ff6347;
+	color: #3399ff;
 }
 
 div.chat-military span.username{
